// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectAttributeFilterHandler should change selection and trigger callbacks: onSelectionChanged parameters 1`] = `
Array [
  Object {
    "selection": Object {
      "isInverted": true,
      "items": Array [
        "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should change selection and trigger callbacks: working selection 1`] = `
Object {
  "isInverted": true,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler should commit selection and trigger callbacks: commited selection 1`] = `
Object {
  "isInverted": true,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler should commit selection and trigger callbacks: onSelectionChanged parameters 1`] = `
Array [
  Object {
    "selection": Object {
      "isInverted": true,
      "items": Array [
        "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should initialize selection and trigger callbacks for negative attribute filter: commited selection 1`] = `
Object {
  "isInverted": false,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler should initialize selection and trigger callbacks for negative attribute filter: onSelectionChanged parameters 1`] = `
Array [
  Object {
    "selection": Object {
      "isInverted": false,
      "items": Array [
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should initialize selection and trigger callbacks for negative attribute filter: onSelectionCommitted parameters 1`] = `
Array [
  Object {
    "selection": Object {
      "isInverted": false,
      "items": Array [
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should initialize selection and trigger callbacks for negative attribute filter: working selection 1`] = `
Object {
  "isInverted": false,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler should initialize selection and trigger callbacks for positive attribute filter: commited selection 1`] = `
Object {
  "isInverted": false,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler should initialize selection and trigger callbacks for positive attribute filter: onSelectionChanged parameters 1`] = `
Array [
  Object {
    "selection": Object {
      "isInverted": false,
      "items": Array [
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should initialize selection and trigger callbacks for positive attribute filter: onSelectionCommitted parameters 1`] = `
Array [
  Object {
    "selection": Object {
      "isInverted": false,
      "items": Array [
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should initialize selection and trigger callbacks for positive attribute filter: working selection 1`] = `
Object {
  "isInverted": false,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler should invert selection and trigger callbacks: onSelectionChanged parameters 1`] = `
Array [
  Object {
    "selection": Object {
      "isInverted": true,
      "items": Array [
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should invert selection and trigger callbacks: working selection after invert 1`] = `
Object {
  "isInverted": true,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler should invert selection and trigger callbacks: working selection before invert 1`] = `
Object {
  "isInverted": false,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler should revert selection and trigger callbacks: onSelectionChanged callback parameters 1`] = `
Array [
  Object {
    "selection": Object {
      "isInverted": false,
      "items": Array [
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
        "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      ],
    },
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should revert selection and trigger callbacks: working selection after change 1`] = `
Object {
  "isInverted": true,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler should revert selection and trigger callbacks: working selection after revert 1`] = `
Object {
  "isInverted": false,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;

exports[`MultiSelectAttributeFilterHandler should revert selection and trigger callbacks: working selection before revert 1`] = `
Object {
  "isInverted": false,
  "items": Array [
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  ],
}
`;
